<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/cash_desk_inventory_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory" >
    </TextView>

    <ListView
        android:id="@+id/cash_desk_listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/cash_desk_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_desk_label_text" />

            <EditText
                android:id="@+id/cash_desk_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cash_desk_edittext_hint"
                android:inputType="numberDecimal" >
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/get_cash_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_cash" >
        </Button>

        <Button
            android:id="@+id/restock_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restock" >
        </Button>
    </LinearLayout>

</LinearLayout>